2007-09-15  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Abort the execution of the Runner on runtime errors.
	* src/runner/runner.hh (raise_error_): New.
	* src/runner/runner.cc (raise_error_): Implement.
	(operator()(CallExp)): Abort the call if the target of the call is
	not available (most probably due to a lookup error).  Catch lookup
	failures and raise an error before aborting when they occur.
	(operator()(Nary)): Use raise_error_.

2007-09-15  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Coroutines can abort their execution.
	* src/runner/coroutine.hh (abort): New.
	(CORO_CALL_INTERNAL_): Handle aborts.
	(CORO_END_): Fix a double delete that occured when the coroutine was
	terminated by an exception.
	* src/runner/coroutine.hxx (abort): Implement.
	* src/runner/scheduler.cc (schedule_immediately): Handle aborts.

2007-09-15  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Make a hierarchy of coroutine exceptions.
	* src/runner/coroutine-yield.hh (CoroutineYield): Rename as
	CoroutineException.
	(CoroutineYield, CoroutineAbort): New exception classes.
	* src/runner/fwd.hh: Forward declare the new classes.

2007-09-15  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Have less SEGV because of un-implemented features.
	* src/parser/bison/ugrammar.y (root, cstmt, lvalue): Adjust the
	rules to avoid SEGVs.
	* src/runner/runner.hh (operator()(TagExp)): Override.
	* src/runner/runner.cc (operator()(TagExp)): Add a dummy
	implementation.
	* src/uconnection.cc (received): Raise an error if the parser
	returns a NULL AST and did not have a parse error.
	* tests-local.mk (XFAIL_TESTS): Remove class-definition.chk (I
	wonder whether this test is of any use to any branch).

2007-09-14  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Remove an invalid assert.
	* src/parser/bison/ugrammar.y (push_Nary_exp): Here.

2007-09-14  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Remove dead code.
	* src/parser/bison/ugrammar.y (push_Nary_exp): Remove an unused
	overload.
